--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bharani2310.github.io/Tourism",
+  "homepage": "https://bharani2310.github.io/Tourism_frontend/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
