--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bharanidharan.in",
+  "homepage": "https://bharanidharan.in/Tourism_frontend",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
